--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
         <div class="content">
             <h1>Personal Library</h1>
             <button id="addBooks">Add Book</button>
-            <div class="list"></div>
+            <div class="list">               
+            </div>
         </div>
         <footer>
             <p>Bharath | <a href="">Source code</a></p>
@@ -55,7 +56,7 @@
             <input type="number" name="pages" id="page" />
             <label for="status">Completed?</label>
             <select name="status" id="status">
-                <option value="Not read yet">Not read yet</option>
+                <option value="Not read">Not read yet</option>
                 <option value="read">read</option>
             </select>
             <button type="submit" id="submitButton">submit</button>
